Added xunit tests for CRUD and edited some values

--- a/targe21house/Views/House/CreateUpdate.cshtml
+++ b/targe21house/Views/House/CreateUpdate.cshtml
@@ -59,7 +59,7 @@ else
             <hr />
             @if (Model.Id.HasValue)
             {
-                <input asp-action="update" asp-controller="house" type="submit" class="btn btn-primary" value="Update" />
+                <input asp-action="update" asp-controller="house" type="submit" class="btn btn-danger" value="Update" />
             }
             else
             {
